--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
   <title>Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&family=DM+Sans:wght@500&family=Kolker+Brush&family=Open+Sans&family=Pacifico&family=Roboto&family=Source+Sans+Pro&display=swap" rel="stylesheet"></head>
-<body style="background-color: #e3f8fa;">
+<body style="background-color: #edf1fa;">
   <div id="root" ></div>
 </body>
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" ></script> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/9143c8ae5e.js" crossorigin="anonymous"></script>
+<!-- <script>
+  const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+</script> -->
 </html>
