--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&family=DM+Sans:wght@500&family=Kolker+Brush&family=Open+Sans&family=Pacifico&family=Roboto&family=Source+Sans+Pro&display=swap" rel="stylesheet"></head>
-<body style="background-color: #edf1fa;">
+<body style="background-color: rgb(237, 249, 254)">
   <div id="root" ></div>
 </body>
 <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" ></script> -->
